--- a/src/components/ESS/Loan Request/LoanRequest.css
+++ b/src/components/ESS/Loan Request/LoanRequest.css
@@ -1,4 +1,7 @@
-
+.loan-request-main-container{
+  background-color: #E5F6FF;
+  height: 130vh;
+}
   
   
   .loan-header {
@@ -30,10 +33,12 @@
   .loan-request-container {
     background-color: #ffffff; 
     padding: 20px;
-    width: 1300px;
+    width: 1340px;
     height: 400px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    margin-left: auto;
+    margin-right: auto;
   }
   
   
