--- a/src/components/ESS/My Interview/MyInterview.css
+++ b/src/components/ESS/My Interview/MyInterview.css
@@ -1,3 +1,10 @@
+.myInterview-main-container{
+  background-color: #E5F6FF;
+  height: 130vh;
+}
+
+
+
 .myInterview-container {
     margin: 20px;
     font-family: Arial, sans-serif;
@@ -7,6 +14,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding: 10px 10px;
   }
   
   .myInterview-back-button, .myInterview-filter-icon {
@@ -116,7 +124,10 @@
   
   .myInterview-table-container {
     margin-top: 10px;
-    overflow-x: auto;
+  
+    width: 1340px;
+    margin-left: auto;
+    margin-right: auto;
   }
   
   .myInterview-table-container table {
