--- a/src/components/ESS/My Resignation/Resignation.css
+++ b/src/components/ESS/My Resignation/Resignation.css
@@ -1,9 +1,14 @@
-
+.resignation-main-container{
+  background-color: #E5F6FF;
+  height: 130vh;
+}
   
   .resignation-header {
     display: flex;
     align-items: center;
     margin-bottom: 20px;
+    margin-right: 20px;
+    padding: 10px 10px;
   }
   
   .resignation-back-button-image {
@@ -13,17 +18,22 @@
   }
   
   .resignation-header h1 {
-    font-size: 20px;
+    font-size: 22px;
     font-weight: bold;
     margin: 0;
+    padding: 10px ;
   }
   
   .resignation-table-container {
-    background-color: #ffffff;
-    padding: 20px;
-    border-radius: 8px;
-    height: 400px;
-    width: 1300px;
+    margin-top: 20px;
+  background-color: #fff;
+  border-radius: 10px;
+  padding: 10px;
+  height: 400px;
+  width: 1390px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  margin-left: auto;
+  margin-right: auto;
   }
   
   .resignation-table {
