--- a/src/components/ESS/My Salary Structure/SalaryStructure.css
+++ b/src/components/ESS/My Salary Structure/SalaryStructure.css
@@ -1,5 +1,8 @@
 /* SalaryStructure.css */
-
+.salary-structure-main-container{
+  background-color: #E5F6FF;
+  height: 130vh;
+}
   
 .salary-header {
     display: flex;
@@ -30,11 +33,14 @@
   
   .personal-info-container {
     background-color: #fff; 
-    height: 250px;
+    height: 300px;
     padding: 20px;
     margin-top: 20px;
+    width: 1380px;
     border-radius: 5px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); 
+    margin-left: auto;
+    margin-right: auto;
   }
   
   .personal-info-container h2 {
@@ -52,7 +58,7 @@
   }
   
   .personal-info-table td {
-    padding: 20px;
+    padding: 20px ;
     border-bottom: 1px solid #ccc;
     color: #333;
     font-size: 16px;
