--- a/src/components/ESS/PerformanceReview/Pagination/Pagination.css
+++ b/src/components/ESS/PerformanceReview/Pagination/Pagination.css
@@ -3,9 +3,12 @@
     justify-content: space-between;
     align-items: center;
     padding: 10px;
+    width: 1340px;
     background-color: #fff; /* White background */
     border-top: 1px solid #dee2e6; /* Optional border for separation */
     margin-top: 20px; /* Space between table and pagination */
+    margin-left: auto;
+    margin-right: auto;
   }
   
   .pagination span {
