--- a/src/components/ESS/PerformanceReview/PerformanceReview.css
+++ b/src/components/ESS/PerformanceReview/PerformanceReview.css
@@ -1,4 +1,7 @@
-
+.performance-main-container{
+  background-color: #E5F6FF;
+  height: 130vh;
+}
   
   .performnace-header {
     display: flex;
@@ -26,10 +29,12 @@
   .review-table-container {
     background-color: #ffffff; 
     padding: 20px;
-    width: 1300px;
+    width: 1340px;
     height: 400px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    margin-left: auto;
+    margin-right: auto;
   }
   
   .review-table {
