--- a/src/components/ESS/Salary Slip/SalarySlip.css
+++ b/src/components/ESS/Salary Slip/SalarySlip.css
@@ -1,8 +1,16 @@
+.salary-slip-main-container{
+  background-color: #E5F6FF;
+  height: 130vh;
+}
+
+
+
 .salary-slip-header {
     display: flex;
     align-items: center;
     justify-content: space-between;
     margin-bottom: 20px;
+    padding: 10px 20px;
   }
   
   .back-button {
@@ -29,6 +37,9 @@
     border-radius: 8px;
     margin-bottom: 20px; 
     transition: all 0.3s ease-in-out; /* Smooth transition when the container appears */
+    margin-left: auto;
+    margin-right: auto;
+    width: 1380px;
   }
   
   .basic-search-container h2 {
@@ -59,12 +70,13 @@
   }
   
   .salary-slip-field label {
-    margin-bottom: 10px;
+    
+    padding: 10px;
   }
   
   .salary-slip-field select {
     height: 50px; 
-    padding: 10px; 
+    padding: 10px ; 
     font-size: 18px; 
     border-radius: 4px;
     border: 1px solid #cccccc;
@@ -100,12 +112,14 @@
   
   .salary-slip-details-container {
     background-color: #ffffff;
-    width: 1300px;
-    height: 300px;
+    width: 1380px;
+    height: 400px;
     padding: 15px;
     border-radius: 8px;
     transition: margin-top 0.3s ease-in-out; /* Smooth transition to push down the container */
     margin-top: 10;
+    margin-left: auto;
+    margin-right: auto;
   }
   
   .salary-slip-details-container h3 {
