--- a/src/components/ESS/Tax Computation/Deduction/Deduction.css
+++ b/src/components/ESS/Tax Computation/Deduction/Deduction.css
@@ -3,8 +3,9 @@
     padding: 20px;
     border-radius: 10px;
     margin-bottom: 20px;
-    width: 1340px; /* Ensures the component takes up full width */
-    box-sizing: border-box; /* Includes padding and border in element's width and height */
+    width: 1390px; /* Ensures the component takes up full width */
+    margin-left: auto;
+    margin-right: auto;
   }
   
   .tds-details h2 {
