--- a/src/components/ESS/Tax Computation/NetTDS/NetTDS.css
+++ b/src/components/ESS/Tax Computation/NetTDS/NetTDS.css
@@ -2,10 +2,12 @@
     background-color: #ffffff;
     border-radius: 10px;
     padding: 20px;
-    width: 1300px;
+    width: 1380px;
     margin: 0 auto;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     margin-bottom: 20px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .net-tds-header {
