--- a/src/components/ESS/Tax Computation/PersonalInfo/PersonalInfo.css
+++ b/src/components/ESS/Tax Computation/PersonalInfo/PersonalInfo.css
@@ -3,9 +3,10 @@
     border-radius: 8px;
     padding: 20px;
     margin-bottom: 20px;
-    margin-top: 80px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    width: 1300px;
+    width: 1380px;
+    margin-left: auto;
+    margin-right: auto;
   }
   
   .personal-information h2 {
