--- a/src/components/Dashboard/HolidayWidget/HolidayWidget.css
+++ b/src/components/Dashboard/HolidayWidget/HolidayWidget.css
@@ -10,7 +10,7 @@
 .holiday-widget {
     background-color: #ffffff;
     padding: 10px;
-    width: 310px;
+    /* width: 310px; */
     height: 95px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
