--- a/src/components/Dashboard/ShiftWidget.js/ShiftWidget.css
+++ b/src/components/Dashboard/ShiftWidget.js/ShiftWidget.css
@@ -11,14 +11,15 @@
   .shift-widget {
       background-color: #ffffff;
       padding: 10px;
-      width: 310px;
+      /* width: 310px; */
       height: 95px;
       border-radius: 8px;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
       margin: 10px auto 10px 0; /* Adjust margin to push it to the left */
       display: flex;
       position: relative;
-      align-items: flex-start;
+      align-items: center;
+      
   
     }
     
@@ -30,32 +31,37 @@
   
     .shift-widget-image {
       background-color: #ffffff;
-      width: 100px !important;
-      height: 100px !important;
+      width: 85px !important;
+      height: 85px !important;
       display: flex;
       align-items: center;
       border-radius: 8px;
       left: 0px;
       top: 50%;
       justify-content: center;
-      margin-right: 15px;
-      margin-bottom: 15px;
+      /* margin-right: 15px;
+      margin-bottom: 15px; */
     }
     
     .shift-info {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      width: calc(80% - 110px);
-      align-items: center;
+      /* display: flex; */
+      /* flex-direction: column; */
+      /* justify-content: center; */
+      /* width: calc(80% - 110px); */
+      height: 85px;
+      margin-left: 10px;
+      /* align-items: center; */
     }
     
     .shift-info h3 {
       font-family: "Open Sans", sans-serif;
       font-size: 18px;
       font-weight: 600;
-      padding-right: 40px;
       color: #000000;
+      line-height: 20px;
+      text-transform: capitalize;
+      white-space: nowrap;
+      word-spacing: 0px;
       margin: 0;
     }
     
@@ -64,12 +70,13 @@
       align-items: center;
       background-color: #e3f2fd;
       border-radius: 5px;
-      padding: 5px 10px;
+      /* padding: 5px 10px; */
       margin-top: 5px;
       font-size: 14px;
       color: #007bff;
       width: 100%;
       justify-content: space-between;
+      
     }
     
     .clock-icon {
