--- a/src/components/ESS/My Investment Declaration/Investment Header/InvestmentHeader.css
+++ b/src/components/ESS/My Investment Declaration/Investment Header/InvestmentHeader.css
@@ -19,10 +19,13 @@
     display: flex;
     align-items: center;
     margin-bottom: 20px;
+    margin-right: 80px;
   }
   
-  h1 {
+  .investment-header-section  h1 {
     margin: 0;
     font-size: 20px;
+    margin-right: 80px;
+    
   }
   
