--- a/src/components/ESS/Attendance/AttendanceTable/AttendanceTable.css
+++ b/src/components/ESS/Attendance/AttendanceTable/AttendanceTable.css
@@ -1,20 +1,20 @@
 .attendance-table-container {
-    max-height: 400px;
-    overflow-y: auto;
-    border: 1px solid #ddd;
-    border-radius: 8px;
+  max-height: 400px;
+  overflow-y: auto;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  padding: 20px;
+  width: 95%;
+  margin: 0 auto;
 }
 
-
 .attendance-table {
-    margin-top: -200px; /* Space between header and table */
-    overflow-x: auto; 
-    background-color: #ffffff; 
-    padding: 20px;
-    border-radius: 10px; 
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
-    display: block;
-  }
+  background-color: #ffffff;
+  padding: 20px; /* Added padding */
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  
+}
 
   .attendance-table .header {
     display: flex;
@@ -36,8 +36,7 @@
   }
 
   .table-container {
-    max-height: 400px; 
-    min-height: 400px;
+    max-height: 600px; 
     overflow-y: auto; 
   }
   
@@ -47,20 +46,20 @@
   }
   
   .attendance-table th, .attendance-table td {
-    padding: 12px 15px;
+    padding: 18px 15px;
     text-align: left;
     border-bottom: 3px solid #ddd;
     white-space: nowrap;
   }
   
   .attendance-table th {
-    background-color: #f2f2f2; 
+    background-color: #ffffff; 
     color: #333; 
     font-weight: bold;
   }
   
   .attendance-table tbody tr:nth-child(even) {
-    background-color: #f9f9f9; 
+    background-color: #ffffff; 
   }
   
   .attendance-table tbody tr:hover {
