--- a/src/components/ESS/Loan Request/LoanRequest.css
+++ b/src/components/ESS/Loan Request/LoanRequest.css
@@ -7,8 +7,8 @@
   .loan-header {
     display: flex;
     align-items: center;
-    justify-content: flex-start;
-    margin-right: 900px;
+    justify-content: space-between;
+   
     padding: 15px;
     border-radius: 8px;
     color: #0d0000; 
@@ -20,6 +20,7 @@
     font-size: 2px;
     font-weight: bold;
     font-size: 20px;
+    margin-right: 1000px;
   }
   
  
@@ -27,6 +28,18 @@
     width: 40px;
     height: 40px;
     cursor: pointer;
+  }
+
+  .loan-add-button{
+    height: 40px;
+    width: 40px;
+    background-color: rgb(97, 12, 236);
+    border: none;
+    font-size: 1rem;
+    padding: 8px;
+    cursor: pointer;
+    border-radius: 50%;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Light shadow for buttons */
   }
   
   
@@ -54,7 +67,7 @@
   }
   
   .loan-request-table th {
-    background-color: #f4f4f4;
+    background-color: #ffffff;
     font-weight: bold;
     color: #333;
   }
@@ -63,11 +76,13 @@
     color: #555;
   }
   
-  .loan-request-table .no-records {
-    text-align: center;
-    color: #888;
-    padding: 20px;
-    font-weight: bold;
+  .loan-request-table button {
+    background-color: #1a73e8;
+    color: white;
+    border: none;
+    padding: 5px 10px;
+    cursor: pointer;
+    border-radius: 3px;
   }
   
   /* Responsive adjustments */
