--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -28,7 +28,7 @@ body {
   
   .widgets-container {
     display: flex;
-    justify-content: flex-start; /* Align widgets to the left */
+    justify-content: center; /* Align widgets to the left */
     gap: 20px; /* Space between widgets */
     flex-wrap: nowrap; /* Allow widgets to wrap to the next line if necessary */
     width: 100%; /* Ensure widgets container takes full width */
