--- a/src/components/Dashboard/NewJoining/NewJoining.css
+++ b/src/components/Dashboard/NewJoining/NewJoining.css
@@ -27,7 +27,7 @@
     left: 20px; 
   }
   
-  .divider-line {
+  .newjoinings-divider-line {
     margin-top: 30px; /* Position the line just under the heading */
     border-bottom: 1px solid #070000; /* Line thickness and color */
     width: 100%; /* Span the full width of the container */
