--- a/src/components/Dashboard/Celebration/Celebration.css
+++ b/src/components/Dashboard/Celebration/Celebration.css
@@ -22,7 +22,7 @@
     left: 20px;
 }
 
-.divider-line {
+.celeberation-divider-line {
     margin-top: 30px;
     border-bottom: 1px solid #070000;
     width: 100%;
@@ -32,7 +32,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100%;
+    /* height: 100%; */
   }
   
   .no-data {
