--- a/src/components/userSidebar/Sidebar.css
+++ b/src/components/userSidebar/Sidebar.css
@@ -105,3 +105,8 @@
 .arrow {
   color: white; /* Adjust arrow color */
 }
+/* .dropdown-menu {
+  display: block !important;
+  opacity: 1 !important;
+  visibility: visible !important;
+} */
