--- a/src/components/ESS/Loan Request/LoanRequest.css
+++ b/src/components/ESS/Loan Request/LoanRequest.css
@@ -25,29 +25,41 @@
   
  
   .back-button-image {
-    width: 40px;
-    height: 40px;
-    cursor: pointer;
-  }
-
-  .loan-add-button{
-    height: 40px;
-    width: 40px;
-    background-color: rgb(97, 12, 236);
+    height: 30px;
+    width: 30px;
+    background-color: white;
     border: none;
     font-size: 1rem;
     padding: 8px;
     cursor: pointer;
     border-radius: 50%;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Light shadow for buttons */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .loan-add-button{
+    height: 30px;
+    width: 30px;
+    background-color: white;
+    border: none;
+    font-size: 1rem;
+    padding: 8px;
+    cursor: pointer;
+    border-radius: 50%;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Light shadow for buttons */
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
   
   
   .loan-request-container {
     background-color: #ffffff; 
     padding: 20px;
-    width: 1340px;
-    height: 400px;
+    height: 70vh;
+    width: 1380px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     margin-left: auto;
