--- a/src/components/ESS/Loan Request/LoanRequestSidebar/LoanRequestSidebar.css
+++ b/src/components/ESS/Loan Request/LoanRequestSidebar/LoanRequestSidebar.css
@@ -2,7 +2,7 @@
     position: fixed;
     top: 0;
     right: 0;
-    width: 400px;
+    width: 500px;
     height: 100%;
     background-color: #fff;
     box-shadow: -2px 0 5px rgba(0, 0, 0, 0.1);
@@ -13,51 +13,48 @@
   
   .loan-request-sidebar-header {
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    margin-bottom: 20px;
+    justify-content: space-between;
+    padding: 20px;
+    border-bottom: 1px solid #ddd;
   }
   
   .loan-request-sidebar-header h2 {
-    font-size: 1.2rem;
     margin: 0;
+    font-size: 20px;
   }
   
   .close-button {
-    height: 40px;
-    width: 40px;
-    background-color: rgb(97, 12, 236);
+    background: none;
     border: none;
-    font-size: 1rem;
-    padding: 8px;
+    font-size: 24px;
     cursor: pointer;
-    border-radius: 50%;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Light shadow for buttons */
   }
   
   .loan-request-sidebar-content {
     display: flex;
     flex-direction: column;
+    padding: 10px;
   }
   
   .loan-request-sidebar-content label {
-    margin-bottom: 5px;
+    display: block;
     font-weight: bold;
+    margin-bottom: 5px;
+    padding: 10px;
   }
   
   .loan-request-sidebar-content input,
   .loan-request-sidebar-content select,
   .loan-request-sidebar-content textarea {
-    margin-bottom: 25px;
+    width: calc(100% - 20px);
     padding: 15px;
-    font-size: 1rem;
-    border: 1px solid #ccc;
+    border-left: 2px solid red;
     border-radius: 4px;
   }
   
   .loan-request-sidebar-footer {
     display: flex;
-    justify-content: space-between;
   }
   
   .loan-save-button,
