--- a/src/components/ESS/My Accolades/Accolades.css
+++ b/src/components/ESS/My Accolades/Accolades.css
@@ -1,13 +1,13 @@
 .accolades-main-container {
-  background-color: #E5F6FF;
-  height: 130vh;
+  padding: 10px 20px;
+    background-color: #e7f1ff; /* Light blue background */
+    height: 100vh;
 }
 
 .accolades-header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 10px 20px;
 }
 
 .accolades-back-button-image {
@@ -30,7 +30,7 @@
 
 .basic-search-container-1 {
   background-color: #ffffff;
-  padding: 15px;
+  padding: 10px 20px;
   height: 220px;
   width: 1380px;
   border-radius: 8px;
@@ -106,15 +106,11 @@
 
 /* Center the table */
 .accolades-table-container {
+  background-color: white;
+  height: 70vh;
+  border-radius: 10px 10px 0px 0px;
   margin-top: 20px;
-  background-color: #fff;
-  border-radius: 10px;
-  padding: 10px;
-  height: 400px;
-  width: 1390px;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-  margin-left: auto;
-  margin-right: auto;
+  padding: 20px; /* Add padding to space out the table from the container */
 }
 
 .accolades-table {
