--- a/src/components/ESS/My Resignation/Resignation.css
+++ b/src/components/ESS/My Resignation/Resignation.css
@@ -7,36 +7,30 @@
   .resignation-header {
     display: flex;
     align-items: center;
-    justify-content: space-between;
     margin-bottom: 20px;
-    padding: 10px 10px;
   }
   
   .resignation-back-button-image {
     cursor: pointer;
     height: 30px;
-    margin-right: 10px;
   }
 
   
   .resignation-header h1 {
-    font-size: 22px;
+    font-size: 1.2rem;
     font-weight: bold;
     margin: 0;
-    padding: 10px ;
-    margin-right: 1100px;
   }
 
   .resignation-add-button {
-    height: 40px;
-    width: 40px;
-    background-color: rgb(97, 12, 236);
+    margin-left: auto;
+    background-color: white;
     border: none;
     font-size: 1rem;
-    padding: 8px;
     cursor: pointer;
+    padding: 8px;
     border-radius: 50%;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Light shadow for buttons */
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
    
   }
   
@@ -45,7 +39,7 @@
   background-color: #fff;
   border-radius: 10px;
   padding: 10px;
-  height: 400px;
+  height: 70vh;
   width: auto;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
   margin-left: auto;
