--- a/src/components/ESS/PerformanceReview/PerformanceReview.css
+++ b/src/components/ESS/PerformanceReview/PerformanceReview.css
@@ -1,16 +1,16 @@
 .performance-main-container{
-  background-color: #E5F6FF;
-  height: 130vh;
+  padding: 10px 20px;
+    background-color: #e7f1ff; /* Light blue background */
+    height: 100vh;
 }
   
   .performnace-header {
     display: flex;
     align-items: center;
-    justify-content: flex-start;
+    background-color: #e7f1ff; /* Light blue background */
+    border-radius: 8px; /* Rounded corners */
     padding: 15px;
-    border-radius: 8px;
-    color: #0d0000; 
-    margin-bottom: 10px;
+    
   }
   
   .back-button-image {
@@ -21,26 +21,24 @@
   }
   
   .performnace-header h1 {
-    margin-left: 10px;
-    font-size: 20px;
+    font-size: 1.2rem;
     font-weight: bold;
+    margin: 0;
+    margin-top: 4px;
+    margin-left: 10px;
   }
   
   .review-table-container {
-    background-color: #ffffff; 
-    padding: 20px;
-    width: 1340px;
-    height: 400px;
-    overflow-y: auto; /* Enable vertical scrolling */
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    margin-left: auto;
-    margin-right: auto;
+    background-color: white;
+    height: 70vh;
+    border-radius: 10px 10px 0px 0px;
   }
   
   .review-table {
+    border-radius: 10px 10px 0px 0px;
     width: 100%;
     border-collapse: collapse;
+    background-color: white;
   }
   
   .review-table th, .review-table td {
