--- a/src/components/ESS/Salary Slip/SalarySlip.css
+++ b/src/components/ESS/Salary Slip/SalarySlip.css
@@ -10,7 +10,7 @@
     align-items: center;
     justify-content: space-between;
     margin-bottom: 20px;
-    padding: 10px 20px;
+    padding: 10px;
   }
   
   .back-button {
