--- a/src/components/Processes/Employee/AddEmployee.css
+++ b/src/components/Processes/Employee/AddEmployee.css
@@ -80,3 +80,22 @@
     font-style: italic;
 }
 
+.addemployee_dropdown-menu {
+    background: white;
+    border: 1px solid #ddd;
+    list-style: none;
+    margin-top: 20px;
+    padding: 0;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    z-index: 1000;
+  }
+  
+  .addemployee_dropdown-menu li {
+    padding: 8px 12px;
+    cursor: pointer;
+  }
+  
+  .addemployee_dropdown-menu li:hover {
+    background-color: #f0f0f0;
+  }
+  
