--- a/src/components/Dashboard/ShiftWidget.js/ShiftWidget.css
+++ b/src/components/Dashboard/ShiftWidget.js/ShiftWidget.css
@@ -11,6 +11,7 @@
   .shift-widget {
       background-color: #ffffff;
       padding: 10px;
+      flex-grow: 1;
       /* width: 310px; */
       height: 95px;
       border-radius: 8px;
