--- a/src/components/userNavbar/Navbar.css
+++ b/src/components/userNavbar/Navbar.css
@@ -1,11 +1,13 @@
 .navbar {
   display: flex;
   justify-content: space-between;
-  align-items: center;
   padding: 10px 20px;
   background-color: #ffffff;
   height: 41px;
   border-bottom: 1px solid #e0e0e0;
+  position: fixed;
+  width: 100vw;
+  z-index: 1000;
 }
 
 .navbar-logo {
@@ -13,7 +15,7 @@
 }
 
 .navbar-right {
-  /* margin-right: 35px; */
+  margin-right: 45px;
   display: flex;
   align-items: center;
 }
