--- a/src/components/Auth/Login/Login.css
+++ b/src/components/Auth/Login/Login.css
@@ -91,6 +91,7 @@ body {
   box-shadow: inset 0 2px 5px rgba(0, 0, 0, 0.1), 0 1px 2px rgba(0, 0, 0, 0.2); /* Soft shadow for a 3D effect */
   outline: none; 
   transition: all 0.3s ease; 
+  cursor: pointer;
 }
 
 .login-input-group input:focus {
