--- a/src/components/Dashboard/ApplyLeave/ApplyLeave.css
+++ b/src/components/Dashboard/ApplyLeave/ApplyLeave.css
@@ -5,7 +5,7 @@
     width: 100%;
     border: 1px solid #ccc;
     padding: 20px;
-    height: 900px;
+    /* height: 900px; */
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     margin-top: 10px;
     position: relative;
