--- a/src/components/Dashboard/AttendanceT/AttendanceT.css
+++ b/src/components/Dashboard/AttendanceT/AttendanceT.css
@@ -6,7 +6,7 @@
     width: 100%;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     margin-top: 10px;
-    margin-right: 2%; 
+    /* margin-right: 2%;  */
     position: relative; 
     display: flex;
     flex-direction: column;
