--- a/src/components/Dashboard/Gallery/Gallery.css
+++ b/src/components/Dashboard/Gallery/Gallery.css
@@ -11,7 +11,7 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     margin-top: 10px;
     position: relative;
-    max-width: 37%;
+    /* max-width: 37%; */
     flex: 1;
   }
 
