--- a/src/components/Dashboard/MyLeaveApplied/MyLeaveApplied.css
+++ b/src/components/Dashboard/MyLeaveApplied/MyLeaveApplied.css
@@ -10,7 +10,7 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     margin-top: 10px;
     position: relative;
-    max-width: 46%;
+    /* max-width: 46%; */
     flex: 1;
   
   }
