--- a/src/components/Dashboard/MyToDoList/MyToDoList.css
+++ b/src/components/Dashboard/MyToDoList/MyToDoList.css
@@ -9,7 +9,7 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     margin-top: 10px;
     position: relative;
-    max-width: 52%;
+    /* max-width: 52%; */
     flex: 1;
 }
 
