--- a/src/components/Dashboard/PerformanceFeedback/PerformanceFeedback.css
+++ b/src/components/Dashboard/PerformanceFeedback/PerformanceFeedback.css
@@ -7,7 +7,7 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     margin-top: 10px;
     position: relative;
-    max-width: 50%;
+    /* max-width: 50%; */
     flex: 1;
   }
   
@@ -17,9 +17,6 @@
     font-weight: 600;
     color: #000000;
     margin: 0;
-    position: absolute;
-    top: 10px;
-    left: 20px;
   }
 
   .divider-lines {
