--- a/src/components/Dashboard/WordsOfWisdom/WordsOfWisdom.css
+++ b/src/components/Dashboard/WordsOfWisdom/WordsOfWisdom.css
@@ -10,7 +10,7 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     margin-top: 10px;
     position: relative;
-    max-width: 30%;
+    /* max-width: 30%; */
     flex: 1;
   }
 
